--- a/计算机网络.md
+++ b/计算机网络.md
@@ -1,15 +1,14 @@
-1. 什么是SYN Flood攻击？如何防御？
+### 什么是SYN Flood攻击？如何防御？
+	TCP三次握手，第一次握手syn发送后，服务器端已经为本次连接分配了资源，736字节，攻击者利用发送大量syn请求，
+	获取大量半连接状态，使服务器资源枯竭
+	防御：
+	1) syn cache: 为半连接请求维护一个hash cache表（每条约160字节，远远小于736），当此次半连接三次握手变成
+	全连接后，再为其分配资源，并从cache中删除
+	2) syn cookie: 不需要像syn cache那样申请额外存储空间存hash表，它是根据算法，利用一些固定信息以及其他攻击者
+	无法知道的信息（包括ip，端口，时间戳等信息），计算出syn，收到ack时，重新计算syn，对比，一致则分配资源
+	3) 代理防火墙：防火墙外部进行三次握手后，代理防火墙再与内部进行三次握手，服务器分配资源。
 
-TCP三次握手，第一次握手syn发送后，服务器端已经为本次连接分配了资源，736字节，攻击者利用发送大量syn请求，
-获取大量半连接状态，使服务器资源枯竭
-防御：
-1) syn cache: 为半连接请求维护一个hash cache表（每条约160字节，远远小于736），当此次半连接三次握手变成
-全连接后，再为其分配资源，并从cache中删除
-2) syn cookie: 不需要像syn cache那样申请额外存储空间存hash表，它是根据算法，利用一些固定信息以及其他攻击者
-无法知道的信息（包括ip，端口，时间戳等信息），计算出syn，收到ack时，重新计算syn，对比，一致则分配资源
-3) 代理防火墙：防火墙外部进行三次握手后，代理防火墙再与内部进行三次握手，服务器分配资源。
-
-2. 常见http状态码
+### 常见http状态码
 
 100：继续传送	101：转换协议（http->https）	102: 继续处理
 200：正常返回	201：请求完成，已分配资源	202：请求被接受，还未完成	204：请求已完成，但没有更新的内容
