--- a/计算机网络-扩展.md
+++ b/计算机网络-扩展.md
@@ -10,4 +10,20 @@
 		b. 负载均衡（代理进行流量分配）
 	3) 透明代理：C和S双方通信都感知不到代理的存在，好像没有使用代理一样，自动设置代理。
 
-### 
+### LM，NTLM和NTLMv2
+	1) LM：最早期win身份验证机制
+		a. 用户密码全部转换为大写，并将密码添加0字节，直到总长度为14字节
+		b. 将得到的14字节分成2组，每组7字节，每组增加奇偶校验位，变成8字节DES key
+		c. 每组最为DES key分别对魔术字符串 "KGS!@#$%" 进行加密，得到两个字符串
+		d. 简单拼接两个字符串，得到LM哈希值
+	2) NTLM：早期win身份验证机制
+		a. C发送用户名和域名到S
+		b. S转发到域控制器DC
+		c. DC用C密码随机产生一个8字节得挑战（Challenge），发送给S
+		d. S将挑战转发给C
+		e. C用密码经过hash及DES加密算法等操作得到一个加密结果响应（Response）发送给S
+		f. S将响应转发给DC
+		g. DC做同样操作验证C响应
+		h. 验证结束，返回结果通知S
+	3) NTLMv2：win2000后的验证机制
+		使用kerboros验证机制
