--- a/语言.md
+++ b/语言.md
@@ -7,3 +7,15 @@
 	3) 分代回收
 	配合前两种方式。将对象分为三代，每代是一个链表。新创建的对象在年轻代，年轻代满了以后，进行垃圾回收处理，活动对象进入中年代，
 	以此类推，代数越高，垃圾回收频率越低。
+	
+### php mkdir函数
+	1) windows：路径展开，并检查有没有* , ? ，若有，则路径错误
+	2) linux：非路径展开，逐层检查目录是否存在
+	路径展开：例：./1?~~~~/../1 处理为 ./1
+	
+### php $_FILES数组
+	1) $_FILES['myFile']['name']：客户端文件的原名称。
+	2) $_FILES['myFile']['type']：文件的 MIME 类型，需要浏览器提供该信息的支持，例如"image/gif"。
+	3) $_FILES['myFile']['size']：已上传文件的大小，单位为byte。 
+	4) $_FILES['myFile']['tmp_name']：文件被上传后在服务端储存的临时文件名，一般是系统默认，可以在php.ini的upload_tmp_dir 指定。
+	5) $_FILES['myFile']['error']：相关错误代码，PHP 4.2.0 版本新增。
