--- a/计算机网络-扩展.md
+++ b/计算机网络-扩展.md
@@ -27,3 +27,10 @@
 		h. 验证结束，返回结果通知S
 	3) NTLMv2：win2000后的验证机制
 		使用kerboros验证机制
+
+### file协议：
+	file协议主要用于访问本地计算机中的文件，好比通过Windows的资源管理器中打开文件或者通过右键单击‘打开’一样。
+	file协议基本格式：
+	```
+	file:///文件路径
+	```
