--- a/计算机网络-扩展.md
+++ b/计算机网络-扩展.md
@@ -35,3 +35,15 @@
 file:///文件路径
 ```
 	
+### ping 工作原理
+	ping使用ICMP协议，发送ICMP Echo请求报文，ICMP为IP层的附属协议，属于IP层，windows一般payload为32字节
+	1) ping 同网段
+		发送ICMP给目的IP，并通过ARP得到其MAC（查ARP缓存，ARP广播）
+	2) ping 不同网段
+		发送ICMP给网关，ARP找到网关MAC（总结就是 先到交换机，再到路由器，最后到目的IP）
+		
+### 
+		
+### PPP协议
+	链路层协议，点对点协议，有两种认证方式，PAP（口令鉴别）CHAP（口令握手鉴别）。
+	PAP只需要一次认证，而且密码传送方式为明文，CHAP是周期性验证，而且密码hash后传送
