--- a/语言.md
+++ b/语言.md
@@ -11,7 +11,10 @@
 ### php mkdir函数
 	1) windows：路径展开，并检查有没有* , ? ，若有，则路径错误
 	2) linux：非路径展开，逐层检查目录是否存在
-	路径展开：例：./1?~~~~/../1 处理为 ./1
+	路径展开：例：
+```
+./1?~~~~/../1 处理为 ./1
+```
 	
 ### php $_FILES数组
 	1) $_FILES['myFile']['name']：客户端文件的原名称。
@@ -19,3 +22,28 @@
 	3) $_FILES['myFile']['size']：已上传文件的大小，单位为byte。 
 	4) $_FILES['myFile']['tmp_name']：文件被上传后在服务端储存的临时文件名，一般是系统默认，可以在php.ini的upload_tmp_dir 指定。
 	5) $_FILES['myFile']['error']：相关错误代码，PHP 4.2.0 版本新增。
+	
+### python迭代器，生成器，装饰器
+	1) 迭代器
+		记住当前迭代的位置，下一次迭代时，可以调用下一个元素，结尾raise stopiteration。
+		实现了"__iter__()", "__next__()"的类，都是迭代器，省内存，只有next()时，才计算下一个值
+	2) 生成器
+		使用yield，返回简单的迭代器，类似于将每个结果print到了一个迭代器中
+	3) 装饰器
+		封装一个函数，并修改这个函数的行为
+```
+def a(func):
+	def wrapper():
+		print(1)
+		func()
+		print(3)
+	
+	return wrapper
+	
+@a			# @a --> b = a(b)
+def b():
+	print(2)
+```
+
+### python 线程
+
