--- a/语言.md
+++ b/语言.md
@@ -45,5 +45,7 @@ def b():
 	print(2)
 ```
 
-### python 线程
-
+### python 多线程
+	使用GIL（全局解释锁），导致同一时间只有一条线程跑在cpu中，不适于cpu密集型并行计算，
+	但可以用在IO密集型并行中。
+	python3协程库 --> asyncio
